--- a/services.html
+++ b/services.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="\&quot;de\&quot;">
- <head>
+<!DOCTYPE html><html lang="\&quot;de\&quot;"><head>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -9,7 +7,7 @@
   <header class="l-header">
    <div class="l-container">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/made-in-germany-with-gear-and-flag-design-for-banner-stamp-sticker-icon-logo-.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Navigation umschalten"><span class="c-nav__toggle-icon"></span></button>
@@ -28,11 +26,11 @@
   \n
   <meta name="\&quot;viewport\&quot;" content="\&quot;width=device-width," initial-scale="1.0\&quot;">
   \n
-  <meta name="\&quot;description\&quot;" content="\&quot;Entdecken" sie unsere umfassenden automobildienstleistungen bei autonova. von fahrzeugwartung bis hin zu spezialanfertigungen – wir bieten erstklassige lösungen für alle ihre automobilbedürfnisse.\_>
+  <meta name="\&quot;description\&quot;" content="\&quot;Entdecken" sie="" unsere="" umfassenden="" automobildienstleistungen="" bei="" autonova.="" von="" fahrzeugwartung="" bis="" hin="" zu="" spezialanfertigungen="" –="" wir="" bieten="" erstklassige="" lösungen="" für="" alle="" ihre="" automobilbedürfnisse.\_="">
   \n
-  <meta property="\&quot;og:title\&quot;" content="\&quot;Dienstleistungen" – autonova\_>
+  <meta property="\&quot;og:title\&quot;" content="\&quot;Dienstleistungen" –="" autonova\_="">
   \n
-  <meta property="\&quot;og:description\&quot;" content="\&quot;Entdecken" sie unsere umfassenden automobildienstleistungen bei autonova. von fahrzeugwartung bis hin zu spezialanfertigungen – wir bieten erstklassige lösungen für alle ihre automobilbedürfnisse.\_>
+  <meta property="\&quot;og:description\&quot;" content="\&quot;Entdecken" sie="" unsere="" umfassenden="" automobildienstleistungen="" bei="" autonova.="" von="" fahrzeugwartung="" bis="" hin="" zu="" spezialanfertigungen="" –="" wir="" bieten="" erstklassige="" lösungen="" für="" alle="" ihre="" automobilbedürfnisse.\_="">
   \n
   <meta property="\&quot;og:type\&quot;" content="\&quot;website\&quot;">
   \n
@@ -50,7 +48,7 @@
   \n\n\n \n\n
   <main>
    \n
-   <section class="\&quot;l-section" l-section--hero\_ style="\&quot;background:" linear-gradient(135deg, rgba(93, 63, 211, 0.95), rgba(255, 215, 0, 0.85)), url(_https: images.unsplash.com photo-1492144534655-ae79c964c9d7?w="1920&amp;h=600&amp;fit=crop')" center cover no-repeat;\_>
+   <section class="\&quot;l-section" l-section--hero\_="" style="\&quot;background:" linear-gradient(135deg,="" rgba(93,="" 63,="" 211,="" 0.95),="" rgba(255,="" 215,="" 0,="" 0.85)),="" url(_https:="" images.unsplash.com="" photo-1492144534655-ae79c964c9d7?w="1920&amp;h=600&amp;fit=crop')" center="" cover="" no-repeat;\_="">
     \n
     <div class="\&quot;l-container\&quot;">
      \n
@@ -66,7 +64,7 @@
     \n
    </section>
    \n\n
-   <nav class="\&quot;l-section" l-section--breadcrumb\_ aria-label="\&quot;Breadcrumb\&quot;">
+   <nav class="\&quot;l-section" l-section--breadcrumb\_="" aria-label="\&quot;Breadcrumb\&quot;">
     \n
     <div class="\&quot;l-container\&quot;">
      \n
@@ -94,22 +92,22 @@
       \n
      </div>
      \n\n
-     <div class="\&quot;l-grid" l-grid--services\_>
+     <div class="\&quot;l-grid" l-grid--services\_="">
       \n
       <article class="\&quot;c-service-card\&quot;" data-aos="\&quot;fade-up\&quot;" data-aos-delay="\&quot;100\&quot;">
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
          <rect x="\&quot;8\&quot;" y="\&quot;24\&quot;" width="\&quot;48\&quot;" height="\&quot;28\&quot;" rx="\&quot;4\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
           \n
-          <path d="\&quot;M16" 24V20C16 15.5817 19.5817 12 24 12H40C44.4183 48 20V24\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
+          <path d="\&quot;M16" 24v20c16="" 15.5817="" 19.5817="" 12="" 24="" 12h40c44.4183="" 48="" 20v24\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
            \n
            <circle cx="\&quot;20\&quot;" cy="\&quot;38\&quot;" r="\&quot;4\&quot;" fill="\&quot;currentColor\&quot;/">
             \n
             <circle cx="\&quot;44\&quot;" cy="\&quot;38\&quot;" r="\&quot;4\&quot;" fill="\&quot;currentColor\&quot;/">
-             \n <path d="\&quot;M24" 38H40\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">\n </path>
+             \n <path d="\&quot;M24" 38h40\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">\n </path>
             </circle>
            </circle>
           </path>
@@ -140,10 +138,10 @@
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
-         <path d="\&quot;M32" 8L12 20V32C12 44 18 52 32 56C46 32V20L32 8Z\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" fill="\&quot;none\&quot;/">
-          \n <path d="\&quot;M24" 32L30 38L40 26\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;" stroke-linejoin="\&quot;round\&quot;/">\n </path>
+         <path d="\&quot;M32" 8l12="" 20v32c12="" 44="" 18="" 52="" 32="" 56c46="" 32v20l32="" 8z\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" fill="\&quot;none\&quot;/">
+          \n <path d="\&quot;M24" 32l30="" 38l40="" 26\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;" stroke-linejoin="\&quot;round\&quot;/">\n </path>
          </path>
         </svg>
         \n
@@ -171,16 +169,16 @@
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
          <rect x="\&quot;12\&quot;" y="\&quot;16\&quot;" width="\&quot;40\&quot;" height="\&quot;32\&quot;" rx="\&quot;4\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
           \n
-          <path d="\&quot;M12" 28H52\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
+          <path d="\&quot;M12" 28h52\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
            \n
            <circle cx="\&quot;28\&quot;" cy="\&quot;38\&quot;" r="\&quot;3\&quot;" fill="\&quot;currentColor\&quot;/">
             \n
-            <path d="\&quot;M36" 36L44 42\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">
-             \n <path d="\&quot;M36" 42L44 36\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">\n </path>
+            <path d="\&quot;M36" 36l44="" 42\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">
+             \n <path d="\&quot;M36" 42l44="" 36\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">\n </path>
             </path>
            </circle>
           </path>
@@ -211,11 +209,11 @@
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
          <circle cx="\&quot;32\&quot;" cy="\&quot;32\&quot;" r="\&quot;20\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
           \n
-          <path d="\&quot;M32" 12V32L42 42\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">
+          <path d="\&quot;M32" 12v32l42="" 42\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">
            \n <circle cx="\&quot;32\&quot;" cy="\&quot;32\&quot;" r="\&quot;3\&quot;" fill="\&quot;currentColor\&quot;/">\n </circle>
           </path>
          </circle>
@@ -245,12 +243,12 @@
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
-         <path d="\&quot;M20" 32L28 40L44 24\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;" stroke-linejoin="\&quot;round\&quot;/">
+         <path d="\&quot;M20" 32l28="" 40l44="" 24\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;" stroke-linejoin="\&quot;round\&quot;/">
           \n
           <circle cx="\&quot;32\&quot;" cy="\&quot;32\&quot;" r="\&quot;22\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
-           \n <path d="\&quot;M32" 10V6M32 58V54M10 32H6M58 32H54\_ stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">\n </path>
+           \n <path d="\&quot;M32" 10v6m32="" 58v54m10="" 32h6m58="" 32h54\_="" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;" stroke-linecap="\&quot;round\&quot;/">\n </path>
           </circle>
          </path>
         </svg>
@@ -279,14 +277,14 @@
        \n
        <div class="\&quot;c-service-card__icon-wrapper\&quot;">
         \n
-        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0 64 64\_ fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
+        <svg class="\&quot;c-service-card__icon\&quot;" width="\&quot;64\&quot;" height="\&quot;64\&quot;" viewBox="\&quot;0" 0="" 64="" 64\_="" fill="\&quot;none\&quot;" xmlns="\&quot;http://www.w3.org/2000/svg\&quot;" aria-hidden="\&quot;true\&quot;">
          \n
          <circle cx="\&quot;32\&quot;" cy="\&quot;40\&quot;" r="\&quot;16\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
           \n
           <circle cx="\&quot;32\&quot;" cy="\&quot;40\&quot;" r="\&quot;10\&quot;" stroke="\&quot;currentColor\&quot;" stroke-width="\&quot;2\&quot;/">
            \n
            <circle cx="\&quot;32\&quot;" cy="\&quot;40\&quot;" r="\&quot;4\&quot;" fill="\&quot;currentColor\&quot;/">
-            \n <path d="\&quot;M32" 8L38 18L50 20L41 29L43 41L32 35L21 41L23 29L14 20L26 18L32 8Z\_ fill="\&quot;currentColor\&quot;/">\n </path>
+            \n <path d="\&quot;M32" 8l38="" 18l50="" 20l41="" 29l43="" 41l32="" 35l21="" 41l23="" 29l14="" 20l26="" 18l32="" 8z\_="" fill="\&quot;currentColor\&quot;/">\n </path>
            </circle>
           </circle>
          </circle>
@@ -318,18 +316,18 @@
     \n
    </section>
    \n\n
-   <section class="\&quot;l-section" l-section--testimonials\_ style="\&quot;background:" linear-gradient(135deg, rgba(93, 63, 211, 0.05), rgba(255, 215, 0, 0.05));\_>
+   <section class="\&quot;l-section" l-section--testimonials\_="" style="\&quot;background:" linear-gradient(135deg,="" rgba(93,="" 63,="" 211,="" 0.05),="" rgba(255,="" 215,="" 0,="" 0.05));\_="">
     \n
     <div class="\&quot;l-container\&quot;">
      \n
      <h2 class="\&quot;c-section-title\&quot;" data-aos="\&quot;fade-up\&quot;">Erfolgsgeschichten unserer Kunden</h2>
      \n
-     <div class="\&quot;l-grid" l-grid--testimonials\_>
+     <div class="\&quot;l-grid" l-grid--testimonials\_="">
       \n
       <article class="\&quot;c-testimonial-card\&quot;" data-aos="\&quot;fade-up\&quot;" data-aos-delay="\&quot;100\&quot;">
        \n
        <div class="\&quot;c-testimonial-card__image-wrapper\&quot;">
-        \n <img src="\&quot;https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=400&amp;h=400&amp;fit=crop\&quot;" alt="\&quot;portrait," testimonial, professional, businessman, satisfied customer\_ class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
+        \n <img src="img/beauty-girl-with-perfect-smile-looking-camera-yellow-background_525549-1099.jpg" alt="\&quot;portrait," testimonial,="" professional,="" businessman,="" satisfied="" customer\_="" class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
        </div>
        \n
        <blockquote class="\&quot;c-testimonial-card__quote\&quot;">
@@ -347,7 +345,7 @@
       <article class="\&quot;c-testimonial-card\&quot;" data-aos="\&quot;fade-up\&quot;" data-aos-delay="\&quot;200\&quot;">
        \n
        <div class="\&quot;c-testimonial-card__image-wrapper\&quot;">
-        \n <img src="\&quot;https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=400&amp;h=400&amp;fit=crop\&quot;" alt="\&quot;portrait," testimonial, professional, businesswoman, happy client\_ class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
+        \n <img src="img/beauty-girl-with-perfect-smile-looking-camera-yellow-background_525549-1099.jpg" alt="\&quot;portrait," testimonial,="" professional,="" businesswoman,="" happy="" client\_="" class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
        </div>
        \n
        <blockquote class="\&quot;c-testimonial-card__quote\&quot;">
@@ -365,7 +363,7 @@
       <article class="\&quot;c-testimonial-card\&quot;" data-aos="\&quot;fade-up\&quot;" data-aos-delay="\&quot;300\&quot;">
        \n
        <div class="\&quot;c-testimonial-card__image-wrapper\&quot;">
-        \n <img src="\&quot;https://images.unsplash.com/photo-1500648767791-00dcc994a43e?w=400&amp;h=400&amp;fit=crop\&quot;" alt="\&quot;portrait," testimonial, professional, young man, enthusiastic customer\_ class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
+        \n <img src="img/beauty-girl-with-perfect-smile-looking-camera-yellow-background_525549-1099.jpg" alt="\&quot;portrait," testimonial,="" professional,="" young="" man,="" enthusiastic="" customer\_="" class="\&quot;c-testimonial-card__image\&quot;" width="\&quot;400\&quot;" height="\&quot;400\&quot;" loading="\&quot;lazy\&quot;">\n
        </div>
        \n
        <blockquote class="\&quot;c-testimonial-card__quote\&quot;">
@@ -386,7 +384,7 @@
     \n
    </section>
    \n\n
-   <section class="\&quot;l-section" l-section--cta\_ style="\&quot;background:" linear-gradient(135deg, rgba(93, 63, 211, 0.95), rgba(255, 215, 0, 0.85)), url(_https: images.unsplash.com photo-1619642751034-765dfdf7c58e?w="1920&amp;h=600&amp;fit=crop')" center cover no-repeat;\_>
+   <section class="\&quot;l-section" l-section--cta\_="" style="\&quot;background:" linear-gradient(135deg,="" rgba(93,="" 63,="" 211,="" 0.95),="" rgba(255,="" 215,="" 0,="" 0.85)),="" url(_https:="" images.unsplash.com="" photo-1619642751034-765dfdf7c58e?w="1920&amp;h=600&amp;fit=crop')" center="" cover="" no-repeat;\_="">
     \n
     <div class="\&quot;l-container\&quot;">
      \n
@@ -395,7 +393,7 @@
       <h2 class="\&quot;c-cta__title\&quot;">Bereit für exzellenten Service?</h2>
       \n
       <p class="\&quot;c-cta__text\&quot;">Kontaktieren Sie uns noch heute und erleben Sie den AutoNova-Unterschied. Ihr Fahrzeug verdient das Beste.</p>
-      \n <a href="\&quot;index.html#contact\&quot;" class="\&quot;c-button" c-button--primary c-button--large\_>Jetzt Termin vereinbaren</a>\n
+      \n <a href="\&quot;index.html#contact\&quot;" class="\&quot;c-button" c-button--primary="" c-button--large\_="">Jetzt Termin vereinbaren</a>\n
      </div>
      \n
     </div>
@@ -411,7 +409,7 @@
   <footer class="l-footer">
    <div class="l-container">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/made-in-germany-with-gear-and-flag-design-for-banner-stamp-sticker-icon-logo-.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" aria-label="Footer-Navigation">
      <ul class="c-nav__list">
@@ -432,6 +430,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
