--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="de">
- <head>
+<!DOCTYPE html><html lang="de"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Erfahren Sie mehr über AutoNova - Ihr vertrauenswürdiger Partner für erstklassige Automobildienstleistungen in Deutschland. Lernen Sie unser Team kennen.">
@@ -19,7 +17,7 @@
   <header class="l-header">
    <div class="l-container">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Navigation umschalten"><span class="c-nav__toggle-icon"></span></button>
@@ -52,7 +50,7 @@
       </div>
       <div class="col-12 col-lg-6" data-aos="fade-left">
        <div class="ratio ratio-16x9">
-        <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&amp;h=600&amp;fit=crop" alt="Modernes Automobilwerk mit innovativer Technologie, Produktionsstraße, professionelle Umgebung" class="img-fluid" width="800" height="600" style="object-fit: cover; border-radius: 8px;" loading="lazy">
+        <img src="img/191658.jpg" alt="Modernes Automobilwerk mit innovativer Technologie, Produktionsstraße, professionelle Umgebung" class="img-fluid" width="800" height="600" style="object-fit: cover; border-radius: 8px;" loading="lazy">
        </div>
       </div>
      </div>
@@ -69,7 +67,7 @@
      <div class="row align-items-center">
       <div class="col-12 col-md-4 text-center mb-4 mb-md-0" data-aos="zoom-in">
        <div class="ratio ratio-1x1 mx-auto" style="max-width: 300px;">
-        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=300&amp;h=300&amp;fit=crop&amp;crop=face" alt="Dr. Michael Weber, Gründer und CEO von AutoNova, professionelles Porträt" class="img-fluid" width="300" height="300" style="object-fit: cover; border-radius: 50%; border: 4px solid var(--color-accent);" loading="lazy">
+        <img src="img/7376.jpg" alt="Dr. Michael Weber, Gründer und CEO von AutoNova, professionelles Porträt" class="img-fluid" width="300" height="300" style="object-fit: cover; border-radius: 50%; border: 4px solid var(--color-accent);" loading="lazy">
        </div>
        <h3 class="h4 mt-3 mb-1" style="font-family: var(--font-family-headings); color: var(--color-text);">Dr. Michael Weber</h3>
        <p class="text-muted">Gründer &amp; CEO</p>
@@ -77,7 +75,7 @@
       <div class="col-12 col-md-8" data-aos="fade-left">
        <div class="p-4" style="background-color: white; border-radius: 8px; box-shadow: var(--shadow-md);">
         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" style="opacity: 0.3; margin-bottom: 1rem;">
-         <path d="M10 20C10 14.4772 14.4772 10 20 10V20H10Z" fill="var(--color-accent)" /> <path d="M30 20C30 25.5228 25.5228 30 20 30V20H30Z" fill="var(--color-accent)" />
+         <path d="M10 20C10 14.4772 14.4772 10 20 10V20H10Z" fill="var(--color-accent)"></path> <path d="M30 20C30 25.5228 25.5228 30 20 30V20H30Z" fill="var(--color-accent)"></path>
         </svg>
         <p class="mb-3" style="font-size: 1.125rem; color: var(--color-text); line-height: 1.8;">Als ich AutoNova 2008 gründete, hatte ich eine klare Vision: erstklassige Automobildienstleistungen zu bieten, die auf Vertrauen, Innovation und Exzellenz basieren. Heute bin ich stolz darauf zu sehen, wie unser Team diese Vision jeden Tag aufs Neue verwirklicht.</p>
         <p class="mb-3" style="font-size: 1.125rem; color: var(--color-text); line-height: 1.8;">Unsere Erfolgsgeschichte basiert auf der Leidenschaft und dem Engagement jedes einzelnen Mitarbeiters. Wir glauben daran, dass jedes Fahrzeug und jeder Kunde einzigartig ist und individuelle Aufmerksamkeit verdient.</p>
@@ -99,7 +97,7 @@
       <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
        <div class="card h-100 d-flex flex-column" style="border: none; box-shadow: var(--shadow-md); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&amp;h=400&amp;fit=crop&amp;crop=face" alt="Thomas Müller, Technischer Direktor, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/136.jpg" alt="Thomas Müller, Technischer Direktor, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h5 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Thomas Müller</h3>
@@ -114,7 +112,7 @@
       <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
        <div class="card h-100 d-flex flex-column" style="border: none; box-shadow: var(--shadow-md); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=400&amp;h=400&amp;fit=crop&amp;crop=face" alt="Sarah Schmidt, Leiterin Kundenservice, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/10231.jpg" alt="Sarah Schmidt, Leiterin Kundenservice, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h5 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Sarah Schmidt</h3>
@@ -129,7 +127,7 @@
       <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
        <div class="card h-100 d-flex flex-column" style="border: none; box-shadow: var(--shadow-md); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=400&amp;h=400&amp;fit=crop&amp;crop=face" alt="Daniel Hoffmann, Leiter Vertrieb, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/5139.jpg" alt="Daniel Hoffmann, Leiter Vertrieb, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h5 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Daniel Hoffmann</h3>
@@ -144,7 +142,7 @@
       <div class="col-12 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
        <div class="card h-100 d-flex flex-column" style="border: none; box-shadow: var(--shadow-md); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-1x1">
-         <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=400&amp;h=400&amp;fit=crop&amp;crop=face" alt="Julia Becker, Leiterin Marketing, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/37106.jpg" alt="Julia Becker, Leiterin Marketing, professionelles Teamfoto" class="card-img-top" width="400" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body d-flex flex-column">
          <h3 class="h5 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Julia Becker</h3>
@@ -171,7 +169,7 @@
       <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
        <div class="card h-100" style="border: none; background-color: white; box-shadow: var(--shadow-sm); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?w=600&amp;h=400&amp;fit=crop" alt="Geschäftszeitung mit Finanznachrichten, Wirtschaftspresse, Medienberichterstattung" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/53920.jpg" alt="Geschäftszeitung mit Finanznachrichten, Wirtschaftspresse, Medienberichterstattung" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body">
          <p class="text-muted small mb-2">Automobilwoche | März 2024</p>
@@ -183,7 +181,7 @@
       <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
        <div class="card h-100" style="border: none; background-color: white; box-shadow: var(--shadow-sm); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1585829365295-ab7cd400c167?w=600&amp;h=400&amp;fit=crop" alt="Digitale Nachrichtenplattform auf Tablet, moderne Medien, Online-Berichterstattung" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/504866.jpg" alt="Digitale Nachrichtenplattform auf Tablet, moderne Medien, Online-Berichterstattung" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body">
          <p class="text-muted small mb-2">Handelsblatt | Februar 2024</p>
@@ -195,7 +193,7 @@
       <div class="col-12 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
        <div class="card h-100" style="border: none; background-color: white; box-shadow: var(--shadow-sm); border-radius: 8px; overflow: hidden;">
         <div class="ratio ratio-16x9">
-         <img src="https://images.unsplash.com/photo-1523961131990-5ea7c61b2107?w=600&amp;h=400&amp;fit=crop" alt="Technologie-Magazin mit innovativen Themen, Fachpresse, Branchenmedien" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
+         <img src="img/184732.jpg" alt="Technologie-Magazin mit innovativen Themen, Fachpresse, Branchenmedien" class="card-img-top" width="600" height="400" style="object-fit: cover;" loading="lazy">
         </div>
         <div class="card-body">
          <p class="text-muted small mb-2">Auto Motor Sport | Januar 2024</p>
@@ -220,7 +218,7 @@
        <div class="card h-100" style="border: none; background-color: white; box-shadow: var(--shadow-md); border-radius: 8px; padding: 2rem;">
         <div class="mb-4">
          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect width="48" height="48" rx="24" fill="var(--color-primary)" opacity="0.1" /> <path d="M24 14C19.58 14 16 17.58 16 22C16 27.25 24 34 24 34C24 34 32 27.25 32 22C32 17.58 28.42 14 24 14ZM24 24.5C22.62 24.5 21.5 23.38 21.5 22C21.5 20.62 22.62 19.5 24 19.5C25.38 19.5 26.5 20.62 26.5 22C26.5 23.38 25.38 24.5 24 24.5Z" fill="var(--color-primary)" />
+          <rect width="48" height="48" rx="24" fill="var(--color-primary)" opacity="0.1"></rect> <path d="M24 14C19.58 14 16 17.58 16 22C16 27.25 24 34 24 34C24 34 32 27.25 32 22C32 17.58 28.42 14 24 14ZM24 24.5C22.62 24.5 21.5 23.38 21.5 22C21.5 20.62 22.62 19.5 24 19.5C25.38 19.5 26.5 20.62 26.5 22C26.5 23.38 25.38 24.5 24 24.5Z" fill="var(--color-primary)"></path>
          </svg>
          <h3 class="h5 mt-3 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Adresse</h3>
          <p style="color: var(--color-text);">Hauptstraße 42
@@ -231,14 +229,14 @@
         </div>
         <div class="mb-4">
          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect width="48" height="48" rx="24" fill="var(--color-accent)" opacity="0.1" /> <path d="M29.5 16H18.5C17.12 16 16.01 17.12 16.01 18.5L16 29.5C16 30.88 17.12 32 18.5 32H29.5C30.88 32 32 30.88 32 29.5V18.5C32 17.12 30.88 16 29.5 16ZM29.5 20.5L24 24.25L18.5 20.5V18.5L24 22.25L29.5 18.5V20.5Z" fill="var(--color-accent)" />
+          <rect width="48" height="48" rx="24" fill="var(--color-accent)" opacity="0.1"></rect> <path d="M29.5 16H18.5C17.12 16 16.01 17.12 16.01 18.5L16 29.5C16 30.88 17.12 32 18.5 32H29.5C30.88 32 32 30.88 32 29.5V18.5C32 17.12 30.88 16 29.5 16ZM29.5 20.5L24 24.25L18.5 20.5V18.5L24 22.25L29.5 18.5V20.5Z" fill="var(--color-accent)"></path>
          </svg>
          <h3 class="h5 mt-3 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">E-Mail</h3>
          <p style="color: var(--color-text);"><a href="mailto:info@domain.com" style="color: var(--color-primary);">info@domain.com</a></p>
         </div>
         <div>
          <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <rect width="48" height="48" rx="24" fill="var(--color-secondary)" opacity="0.1" /> <path d="M28.5 15C28.12 15 27.75 15.11 27.44 15.29L24 17.5L20.56 15.29C20.06 14.97 19.44 14.94 18.92 15.21C18.4 15.48 18.05 16.01 18.01 16.6L18 30C18 30.83 18.67 31.5 19.5 31.5H28.5C29.33 31.5 30 30.83 30 30V16.5C30 15.67 29.33 15 28.5 15Z" fill="var(--color-secondary)" />
+          <rect width="48" height="48" rx="24" fill="var(--color-secondary)" opacity="0.1"></rect> <path d="M28.5 15C28.12 15 27.75 15.11 27.44 15.29L24 17.5L20.56 15.29C20.06 14.97 19.44 14.94 18.92 15.21C18.4 15.48 18.05 16.01 18.01 16.6L18 30C18 30.83 18.67 31.5 19.5 31.5H28.5C29.33 31.5 30 30.83 30 30V16.5C30 15.67 29.33 15 28.5 15Z" fill="var(--color-secondary)"></path>
          </svg>
          <h3 class="h5 mt-3 mb-2" style="font-family: var(--font-family-headings); color: var(--color-text);">Telefon</h3>
          <p style="color: var(--color-text);"><a href="tel:+498912345678" style="color: var(--color-primary);">+49 89 12345678</a></p>
@@ -251,12 +249,12 @@
          <div class="row g-3">
           <div class="col-12 col-md-6">
            <div class="c-form__field">
-            <label for="name" class="c-form__label">Name *</label> <input type="text" class="c-form__input form-control" id="name" name="name" required>
+            <label for="name" class="c-form__label">Name *</label> <input type="text" class="c-form__input form-control" id="name" name="name" required="">
            </div>
           </div>
           <div class="col-12 col-md-6">
            <div class="c-form__field">
-            <label for="email" class="c-form__label">E-Mail *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required>
+            <label for="email" class="c-form__label">E-Mail *</label> <input type="email" class="c-form__input form-control" id="email" name="email" required="">
            </div>
           </div>
           <div class="col-12">
@@ -266,12 +264,12 @@
           </div>
           <div class="col-12">
            <div class="c-form__field">
-            <label for="message" class="c-form__label">Nachricht *</label> <textarea class="c-form__textarea form-control" id="message" name="message" rows="5" required></textarea>
+            <label for="message" class="c-form__label">Nachricht *</label> <textarea class="c-form__textarea form-control" id="message" name="message" rows="5" required=""></textarea>
            </div>
           </div>
           <div class="col-12">
            <div class="c-form__checkbox">
-            <input type="checkbox" id="privacy" name="privacy" required> <label for="privacy">Ich habe die <a href="privacy.html" style="color: var(--color-primary);">Datenschutzerklärung</a> gelesen und stimme dieser zu *</label>
+            <input type="checkbox" id="privacy" name="privacy" required=""> <label for="privacy">Ich habe die <a href="privacy.html" style="color: var(--color-primary);">Datenschutzerklärung</a> gelesen und stimme dieser zu *</label>
            </div>
           </div>
           <div class="col-12">
@@ -288,7 +286,7 @@
   <footer class="l-footer">
    <div class="l-container">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" aria-label="Footer-Navigation">
      <ul class="c-nav__list">
@@ -309,6 +307,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
