--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="de">
- <head>
+<!DOCTYPE html><html lang="de"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio - AutoNova | Unsere Projekte und Erfolgsgeschichten</title>
@@ -22,7 +20,7 @@
   <header class="l-header">
    <div class="l-container">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Navigation umschalten"><span class="c-nav__toggle-icon"></span></button>
@@ -57,7 +55,7 @@
      </div>
      <div class="col-12 col-lg-6 mt-4 mt-lg-0" data-aos="fade-left">
       <div class="ratio ratio-16x9">
-       <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=800&amp;h=600&amp;fit=crop" alt="Luxusfahrzeug, Sportwagen, Showroom" class="img-fluid rounded shadow" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/5573.jpg" alt="Luxusfahrzeug, Sportwagen, Showroom" class="img-fluid rounded shadow" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
      </div>
     </div>
@@ -91,7 +89,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="premium" data-aos="fade-up">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600&amp;h=450&amp;fit=crop" alt="Luxuslimousine, Premium-Fahrzeug, schwarzes Auto" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/prasidentenlimousine-auto-vektordesign.jpg" alt="Luxuslimousine, Premium-Fahrzeug, schwarzes Auto" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-primary mb-2 align-self-start">Premium-Fahrzeuge</span>
@@ -105,7 +103,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="elektro" data-aos="fade-up" data-aos-delay="100">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1560958089-b8a1929cea89?w=600&amp;h=450&amp;fit=crop" alt="Elektrofahrzeug, E-Auto, moderne Technologie" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/vektorgrune-fahrzeuge-blaues-polygonales-elektroauto-mit-elektrostation-auf-b.jpg" alt="Elektrofahrzeug, E-Auto, moderne Technologie" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-success mb-2 align-self-start">Elektromobilität</span>
@@ -119,7 +117,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="service" data-aos="fade-up" data-aos-delay="200">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=600&amp;h=450&amp;fit=crop" alt="Autowerkstatt, Mechaniker, Fahrzeugwartung" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/2962.jpg" alt="Autowerkstatt, Mechaniker, Fahrzeugwartung" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-warning text-dark mb-2 align-self-start">Service &amp; Wartung</span>
@@ -133,7 +131,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="tuning" data-aos="fade-up">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=600&amp;h=450&amp;fit=crop" alt="Sportwagen, Tuning, modifiziertes Fahrzeug" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/135405.jpg" alt="Sportwagen, Tuning, modifiziertes Fahrzeug" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-danger mb-2 align-self-start">Tuning &amp; Customizing</span>
@@ -147,7 +145,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="premium" data-aos="fade-up" data-aos-delay="100">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1617814076367-b759c7d7e738?w=600&amp;h=450&amp;fit=crop" alt="BMW Luxusfahrzeug, Premium-Limousine" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/6036.jpg" alt="BMW Luxusfahrzeug, Premium-Limousine" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-primary mb-2 align-self-start">Premium-Fahrzeuge</span>
@@ -161,7 +159,7 @@
      <div class="col-12 col-md-6 col-lg-4 portfolio-item" data-category="elektro" data-aos="fade-up" data-aos-delay="200">
       <div class="card h-100 d-flex flex-column shadow-sm">
        <div class="ratio ratio-4x3">
-        <img src="https://images.unsplash.com/photo-1593941707882-a5bba14938c7?w=600&amp;h=450&amp;fit=crop" alt="Audi e-tron, Elektro-SUV, Ladestation" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
+        <img src="img/1474.jpg" alt="Audi e-tron, Elektro-SUV, Ladestation" class="card-img-top" style="object-fit: cover;" width="600" height="450" loading="lazy">
        </div>
        <div class="card-body d-flex flex-column">
         <span class="badge bg-success mb-2 align-self-start">Elektromobilität</span>
@@ -184,14 +182,14 @@
     <div class="row g-4">
      <div class="col-12 col-md-6" data-aos="fade-right">
       <div class="ratio ratio-16x9 shadow rounded overflow-hidden">
-       <iframe src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ" title="AutoNova Portfolio Video 1" allowfullscreen loading="lazy" style="border: none;"></iframe>
+       <iframe src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ" title="AutoNova Portfolio Video 1" allowfullscreen="" loading="lazy" style="border: none;"></iframe>
       </div>
       <h3 class="h5 fw-bold mt-3">Fahrzeugübergabe Mercedes S-Klasse</h3>
       <p class="text-muted">Sehen Sie, wie wir unseren Kunden ihre Traumfahrzeuge übergeben.</p>
      </div>
      <div class="col-12 col-md-6" data-aos="fade-left">
       <div class="ratio ratio-16x9 shadow rounded overflow-hidden">
-       <iframe src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ" title="AutoNova Portfolio Video 2" allowfullscreen loading="lazy" style="border: none;"></iframe>
+       <iframe src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ" title="AutoNova Portfolio Video 2" allowfullscreen="" loading="lazy" style="border: none;"></iframe>
       </div>
       <h3 class="h5 fw-bold mt-3">E-Mobilität im Alltag</h3>
       <p class="text-muted">Erfahren Sie, wie einfach der Umstieg auf Elektromobilität ist.</p>
@@ -214,7 +212,7 @@
          <div class="card shadow-sm border-0 p-4 text-center">
           <div class="mb-3">
            <div class="ratio ratio-1x1 rounded-circle overflow-hidden mx-auto" style="width: 80px; height: 80px;">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=80&amp;h=80&amp;fit=crop" alt="Kunde Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
+            <img src="img/kundenfeedback-zitat-testimonial-social-media-post-web-banner-quadrat-flyer-v.jpg" alt="Kunde Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
            </div>
           </div>
           <blockquote class="blockquote mb-3">
@@ -233,7 +231,7 @@
          <div class="card shadow-sm border-0 p-4 text-center">
           <div class="mb-3">
            <div class="ratio ratio-1x1 rounded-circle overflow-hidden mx-auto" style="width: 80px; height: 80px;">
-            <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=80&amp;h=80&amp;fit=crop" alt="Kundin Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
+            <img src="img/neujahrsverkauf.jpg" alt="Kundin Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
            </div>
           </div>
           <blockquote class="blockquote mb-3">
@@ -252,7 +250,7 @@
          <div class="card shadow-sm border-0 p-4 text-center">
           <div class="mb-3">
            <div class="ratio ratio-1x1 rounded-circle overflow-hidden mx-auto" style="width: 80px; height: 80px;">
-            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=80&amp;h=80&amp;fit=crop" alt="Kunde Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
+            <img src="img/kundenfeedback-zitat-testimonial-social-media-post-web-banner-quadrat-flyer-v.jpg" alt="Kunde Testimonial" style="object-fit: cover;" width="80" height="80" loading="lazy">
            </div>
           </div>
           <blockquote class="blockquote mb-3">
@@ -304,11 +302,11 @@
         Exklusive Einblicke in unsere Arbeitsprozesse
        </li>
       </ul>
-      <a href="#" class="c-button" download>Jetzt PDF herunterladen (3.2 MB)</a>
+      <a href="#" class="c-button" download="">Jetzt PDF herunterladen (3.2 MB)</a>
      </div>
      <div class="col-12 col-lg-6 mt-4 mt-lg-0" data-aos="fade-left">
       <div class="ratio ratio-4x3">
-       <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=800&amp;h=600&amp;fit=crop" alt="Portfolio-Broschüre, Dokumente, Geschäftsunterlagen" class="img-fluid rounded shadow" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/262198.jpg" alt="Portfolio-Broschüre, Dokumente, Geschäftsunterlagen" class="img-fluid rounded shadow" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
      </div>
     </div>
@@ -325,7 +323,7 @@
   <!-- SVG Icons -->
   <svg style="display: none;">
    <symbol id="icon-check" viewBox="0 0 20 20">
-    <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd" />
+    <path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path>
    </symbol>
   </svg>
   <!-- Modals -->
@@ -339,7 +337,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=800&amp;h=600&amp;fit=crop" alt="Mercedes S-Klasse Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/19733716.jpg" alt="Mercedes S-Klasse Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Führungskraft aus dem Finanzsektor</p>
       <p><strong>Projektdauer:</strong> 8 Wochen</p>
@@ -370,7 +368,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1560958089-b8a1929cea89?w=800&amp;h=600&amp;fit=crop" alt="Tesla Model S Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/8644.jpg" alt="Tesla Model S Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Technik-Enthusiast und Early Adopter</p>
       <p><strong>Projektdauer:</strong> 6 Wochen</p>
@@ -401,7 +399,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1486262715619-67b85e0b08d3?w=800&amp;h=600&amp;fit=crop" alt="Flottenservice Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/8078977.jpg" alt="Flottenservice Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Mittelständisches IT-Unternehmen mit 25 Fahrzeugen</p>
       <p><strong>Projektdauer:</strong> Laufender Servicevertrag seit 2 Jahren</p>
@@ -432,7 +430,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?w=800&amp;h=600&amp;fit=crop" alt="Porsche 911 Tuning Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/8788891.jpg" alt="Porsche 911 Tuning Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Motorsport-Begeisterter aus München</p>
       <p><strong>Projektdauer:</strong> 12 Wochen</p>
@@ -463,7 +461,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1617814076367-b759c7d7e738?w=800&amp;h=600&amp;fit=crop" alt="BMW 7er Individual Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/5047597.jpg" alt="BMW 7er Individual Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Geschäftsführer eines internationalen Konzerns</p>
       <p><strong>Projektdauer:</strong> 10 Wochen</p>
@@ -494,7 +492,7 @@
      </div>
      <div class="modal-body">
       <div class="ratio ratio-16x9 mb-3">
-       <img src="https://images.unsplash.com/photo-1593941707882-a5bba14938c7?w=800&amp;h=600&amp;fit=crop" alt="Audi e-tron Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
+       <img src="img/16156.jpg" alt="Audi e-tron Details" style="object-fit: cover;" width="800" height="600" loading="lazy">
       </div>
       <p><strong>Kunde:</strong> Junge Familie mit zwei Kindern</p>
       <p><strong>Projektdauer:</strong> 5 Wochen</p>
@@ -520,7 +518,7 @@
   <footer class="l-footer">
    <div class="l-container">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" aria-label="Footer-Navigation">
      <ul class="c-nav__list">
@@ -541,6 +539,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
