--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html lang="de">
- <head>
+<!DOCTYPE html><html lang="de"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Datenschutzerklärung von AutoNova Deutschland. Erfahren Sie, wie wir Ihre personenbezogenen Daten sammeln, verwenden und schützen.">
@@ -18,7 +16,7 @@
   <header class="l-header">
    <div class="l-container">
     <div class="l-header__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="eager"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" id="main-nav" aria-label="Hauptnavigation">
      <button type="button" class="c-nav__toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Navigation umschalten"><span class="c-nav__toggle-icon"></span></button>
@@ -209,7 +207,7 @@
   <footer class="l-footer">
    <div class="l-container">
     <div class="l-footer__brand">
-     <a href="index.html" class="c-logo"> <img src="https://images.unsplash.com/photo-1599305445671-ac291c95aaa9/150x40" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
+     <a href="index.html" class="c-logo"> <img src="img/hergestellt-in-deutschland-mit-ausrustung-und-fahnendesign-fur-banner-stempel.jpg" alt="AutoExpert Deutschland Logo" class="c-logo__img" width="150" height="40" decoding="async" loading="lazy"> <span class="c-logo__text">AutoExpert Deutschland</span> </a>
     </div>
     <nav class="c-nav" aria-label="Footer-Navigation">
      <ul class="c-nav__list">
@@ -230,6 +228,6 @@
     </div>
    </div>
   </footer>
-  <script src="script.js" defer></script>
- </body>
-</html>
+  <script src="script.js" defer=""></script>
+ 
+</body></html>
